objects/Tour_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>No_Show_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when email is sent from SpaceStation to contact when they are a No Show on a Tour</description>
        <label>No Show Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Desks_Building__c</fullName>
        <formula>Opportunity__r.No_of_Desks_Building__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Desks - Building</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Desks_Cluster__c</fullName>
        <formula>Opportunity__r.No_of_Desks_Cluster__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Desk count at the cluster level 
&gt;&gt;&gt;UNWEIGHTED</inlineHelpText>
        <label>No. of Desks - Cluster</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Desks_Portfolio__c</fullName>
        <formula>Opportunity__r.No_of_Desks_Portfolio__c</formula>
        <inlineHelpText>Net Desk count at the portfolio level 
&gt;&gt;&gt;UNWEIGHTED</inlineHelpText>
        <label>No. of Desks - Portfolio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Desks_Region__c</fullName>
        <formula>Opportunity__r.No_of_Desks_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Desk count at the region level 
&gt;&gt;&gt;UNWEIGHTED</inlineHelpText>
        <label>No. of Desks - Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Desks_Territory__c</fullName>
        <formula>Opportunity__r.No_of_Desks_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Desk count at the  territory level 
&gt;&gt;&gt;UNWEIGHTED</inlineHelpText>
        <label>No. of Desks - Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Reason__c</fullName>
        <label>Not Interested Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tour_Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Too Small</fullName>
                </value>
                <value>
                    <fullName>Office Configuration Unsuitable</fullName>
                </value>
                <value>
                    <fullName>Cultural Fit</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lack of parking space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Desks_2016__c</fullName>
        <description>This is a new field to capture no of desks from website and other external systems, moving forward we will be referring this field only</description>
        <label>Number of Desks 2016</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 desk</fullName>
                </value>
                <value>
                    <fullName>2-5 desks</fullName>
                </value>
                <value>
                    <fullName>6-10 desks</fullName>
                </value>
                <value>
                    <fullName>11-20 desks</fullName>
                </value>
                <value>
                    <fullName>21-50 desks</fullName>
                </value>
                <value>
                    <fullName>51+ desks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Desks__c</fullName>
        <description>This is a temporary field to capture the Number of Desk for the Journey</description>
        <formula>Journey__r.Number_Of_Desks__c</formula>
        <label>Number of Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objections__c</fullName>
        <description>Captures the reason why the prospect is not ready to Sign but is Interested</description>
        <inlineHelpText>Captures the reason why the prospect is not ready to Sign but is Interested</inlineHelpText>
        <label>Objections</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comparing Competitors</fullName>
                </value>
                <value>
                    <fullName>Desired office/Desk not Available</fullName>
                </value>
                <value>
                    <fullName>Interested for the future</fullName>
                </value>
                <value>
                    <fullName>Interested in other WeWork Locations</fullName>
                </value>
                <value>
                    <fullName>Not primary decision maker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Available__c</fullName>
        <label>Office Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Capacity__c</fullName>
        <description>Captures the size of office in which the prospect is interested</description>
        <inlineHelpText>Captures the size of office in which the prospect is interested
&gt;&gt;&gt;only populated when Office Type is "Office"</inlineHelpText>
        <label>Office Capacity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Week_email_reminder_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send One Week email reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contract_Stage_for_Tour__c</fullName>
        <description>This field is used  in community view menu button for determining if the send paperwork is allowed or not from the tour</description>
        <formula>TEXT(Opportunity__r.Contract_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Contract Stage for Tour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_RecordType__c</fullName>
        <formula>Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_for_Tour__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage for Tour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tours</relationshipLabel>
        <relationshipName>Tour_Outcome</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In case if the user wants to reschedule an existing tour, then we capture the existing tour ID in this.</description>
        <inlineHelpText>In case if the user wants to reschedule an existing tour, then we capture the existing tour ID in this.</inlineHelpText>
        <label>Original Tour</label>
        <referenceTo>Tour_Outcome__c</referenceTo>
        <relationshipLabel>Tours (Original Tour)</relationshipLabel>
        <relationshipName>Tour_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Objections__c</fullName>
        <description>Captures the reason if the user selects Other from the picklist</description>
        <inlineHelpText>Captures the reason if the user selects Other from the picklist</inlineHelpText>
        <label>Other Objections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Our_next_steps__c</fullName>
        <label>Our next steps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send paperwork</fullName>
                </value>
                <value>
                    <fullName>Place an office on temporary hold</fullName>
                </value>
                <value>
                    <fullName>Add to wait list</fullName>
                </value>
                <value>
                    <fullName>Schedule additional tour</fullName>
                </value>
                <value>
                    <fullName>Send additional information</fullName>
                </value>
                <value>
                    <fullName>Follow up on their decision</fullName>
                </value>
                <value>
                    <fullName>None, no longer interested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_Reservables__c</fullName>
        <description>Outcome reservable UUIDs sync with space station</description>
        <inlineHelpText>Outcome reservable UUIDs sync with space station</inlineHelpText>
        <label>Outcome Reservables</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <formula>Location__r.Portfolio_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Email__c</fullName>
        <formula>Location__r.Portfolio_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Name__c</fullName>
        <formula>Location__r.Portfolio_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Email__c</fullName>
        <formula>Primary_Member__r.Email</formula>
        <label>Primary Member Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Owner__c</fullName>
        <formula>Primary_Member__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Phone_Number__c</fullName>
        <formula>Primary_Member__r.Phone</formula>
        <label>Primary Member Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours (Primary Member)</relationshipLabel>
        <relationshipName>Tours3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WeLive</fullName>
                </value>
                <value>
                    <fullName>WeWork</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Used to capture promotional code from marketing campaigns</description>
        <inlineHelpText>Used to capture promotional code from marketing campaigns</inlineHelpText>
        <label>Promo Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reasons__c</fullName>
        <description>One or more Reasons which suggests the outcome of the Tour.</description>
        <label>Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reassignment_On_User_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassignment On User Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Fail_Reason__c</fullName>
        <label>Referral Fail Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_By_Code__c</fullName>
        <label>Referred By Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours (Referrer)</relationshipLabel>
        <relationshipName>Tours5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Location__r.Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Email__c</fullName>
        <formula>Location__r.Regional_Sales_Manager_Email__c</formula>
        <label>Regional Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Name__c</fullName>
        <formula>Location__r.Regional_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Buildings_Country__c</fullName>
        <formula>TEXT(Location__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buildings Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Sales_Director__c</fullName>
        <description>Sales Director Responsible for the Tour Market / Building</description>
        <formula>Location__r.Sales_Director__r.FirstName + " " +  Location__r.Sales_Director__r.LastName</formula>
        <label>Responsible Sales Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Building_as_Opp__c</fullName>
        <formula>IF(Location__c = Opportunity__r.Building__c , 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Building as Opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled With</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours</relationshipLabel>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM</fullName>
                </value>
                <value>
                    <fullName>8:30AM</fullName>
                </value>
                <value>
                    <fullName>9:00AM</fullName>
                </value>
                <value>
                    <fullName>9:30AM</fullName>
                </value>
                <value>
                    <fullName>10:00AM</fullName>
                </value>
                <value>
                    <fullName>10:30AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:30AM</fullName>
                </value>
                <value>
                    <fullName>12:00PM</fullName>
                </value>
                <value>
                    <fullName>12:30PM</fullName>
                </value>
                <value>
                    <fullName>1:00PM</fullName>
                </value>
                <value>
                    <fullName>1:30PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:30PM</fullName>
                </value>
                <value>
                    <fullName>3:00PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:30PM</fullName>
                </value>
                <value>
                    <fullName>5:00PM</fullName>
                </value>
                <value>
                    <fullName>5:30PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM</fullName>
                </value>
                <value>
                    <fullName>6:30PM</fullName>
                </value>
                <value>
                    <fullName>7:00PM</fullName>
                </value>
                <value>
                    <fullName>7:30PM</fullName>
                </value>
                <value>
                    <fullName>8:00PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Overall Status from SpaceStation</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Not Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <formula>Location__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Email__c</fullName>
        <formula>Location__r.Territory_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Name__c</fullName>
        <formula>Location__r.Territory_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Email_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Email Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Today_date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Booked_1_Day_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Tour is booked the day before the Tour Date</description>
        <label>Tour Booked 1 Day Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tour_Booked_Today__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Tour is created with a Tour date of TODAY</description>
        <label>Tour Booked Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tour_Canceled_Date__c</fullName>
        <label>Tour Canceled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Completed_By_Contact_UUID__c</fullName>
        <description>Contact UUID of user who completes the tour</description>
        <label>Tour Completed By Contact UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Completed_By_Name__c</fullName>
        <inlineHelpText>Person who completed tour and filled out outcome form</inlineHelpText>
        <label>Tour Completed By Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Completed_By_SFID__c</fullName>
        <label>Tour Completed By SFID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Completed_By_UUID__c</fullName>
        <description>Will come from SalesLady : Tour end point</description>
        <label>Tour Completed By UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who completed tour and filled
&gt;&gt;&gt;This will be blank if the person who completed the tour is NOT a SFDC user (refer to Tour Completed By Name to see who that is); otherwise the two fields should match</inlineHelpText>
        <label>Tour Completed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tour Outcomes (Tour Completed By)</relationshipLabel>
        <relationshipName>Tour_Completed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tour_Completed__c</fullName>
        <label>Tour Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Confirmation_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tour Confirmation Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tour_Date_Calculation__c</fullName>
        <formula>today()- Tour_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Date Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Date_Time__c</fullName>
        <description>This field is used in SFMC to send tour reminders in local timezone</description>
        <formula>datetimevalue(text(Tour_Date__c)+ " " + 

If(Right(text(Start_Time__c), 2) = "PM" &amp;&amp; Left(text(Start_Time__c), 2) = "12", 
Left(text(Start_Time__c), 5) + ":00", 
If(Right(text(Start_Time__c), 2) = "AM" &amp;&amp; Left(text(Start_Time__c), 2) = "12", 
"00:" + Mid(text(Start_Time__c), 4, 2) + ":00", 
If(Right(text(Start_Time__c),2)="PM" &amp;&amp; Len(text(Start_Time__c))=6, 
text(value(Left(text(Start_Time__c),1)) + 12)+right(left(text(Start_Time__c),4),3)+":00", 
If(Len(text(Start_Time__c))&gt;6,Left(text(Start_Time__c),5), 
"0"+Left(text(Start_Time__c),4))+":00")) 
) 
) - Location__r.GMT_Offset__c / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tour start time in your local time zone</inlineHelpText>
        <label>Tour Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tour_Date__c</fullName>
        <label>Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Date_in_the_Past__c</fullName>
        <description>Checks the difference between Created Date and Tour Date to see if the record was created after the Tour</description>
        <formula>DATEVALUE(CreatedDate)  -   Tour_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks the difference between Created Date and Tour Date to see if the record was created after the Tour</inlineHelpText>
        <label>Tour Date Days in the Past</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Modification_Web_Form_Link__c</fullName>
        <formula>HYPERLINK("https://welcome.wework.com/forms/modifytour.php?tourId="&amp;Id,"Modify Tour","_blank")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Modification Web Form Link (testing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Notes_Backup__c</fullName>
        <description>This fields captures the Tour notes booked in past.

The reason to capture the values on this field is to deprecate the Tour Notes formula field. The updated formula will be a blank value.

The reason to make this changes is to handle the issue for limit of characters for Tour notes while tour booking</description>
        <label>Tour Notes - Backup</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tour_Notes__c</fullName>
        <formula>' '</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Form__c</fullName>
        <formula>IF( AND(ISBLANK(Opportunity__c), NOT(ISBLANK(Lead__c))), HYPERLINK("/lead/leadconvert.jsp?retURL=%2F"&amp;Id&amp;"&amp;id="&amp; Lead__r.Lead_Id__c ,"Convert Lead","_self"), HYPERLINK("https://welcome.wework.com/forms/tour.php?id="&amp;Opportunity__c&amp;"&amp;tourId="&amp;Id,"Fill Out Form","_blank"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You can't fill out this form for Leads. You have to have an Opportunity in order to fill out the form. Information on Opportunity and Account is updated based on the response. You can click the link "Convert Lead" to create an Opportunity.</inlineHelpText>
        <label>Tour Outcome Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Link_SMS__c</fullName>
        <formula>"&amp;Id=" + Id + "&amp;UserId=005F0000002YbvS" + "&amp;From=+14156695919" + "&amp;Type=SMS&amp;To=" + Assigned_To__r.MobilePhone + "&amp;Body=Tour with " + Scheduled_By__r.FirstName + " " +  Scheduled_By__r.LastName + " @ " +  TEXT(Start_Time__c) + ". http://to.wework.com/" + Id + "/" + Assigned_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Outcome Link SMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Notes__c</fullName>
        <inlineHelpText>Notes field from SpaceStation Outcome form</inlineHelpText>
        <label>Tour Outcome Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_UUID__c</fullName>
        <label>Tour Outcome UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome__c</fullName>
        <inlineHelpText>Outcome Status from SpaceStation</inlineHelpText>
        <label>Tour Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to sign now</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                    <label>Tour Interested</label>
                </value>
                <value>
                    <fullName>Did not show up</fullName>
                    <label>No Show</label>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                    <label>Does not want Membership</label>
                </value>
                <value>
                    <fullName>Tour Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tour_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours (Tour Participant)</relationshipLabel>
        <relationshipName>TourParticipated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tour_Reminder_SMS__c</fullName>
        <formula>"We look forward to meeting you at WeWork for your tour at " + TEXT(Start_Time__c) + " today!"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Reminder SMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Scheduled_With_Email__c</fullName>
        <label>Tour Scheduled With Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tour_With_First_Name__c</fullName>
        <formula>IF( NOT(ISBLANK(Tour_Participant__c)),  
  Tour_Participant__r.Salutation_Name__c,
  IF( NOT(ISBLANK(Lead__c)), 
    IF( ISBLANK(Lead__r.Salutation_Name__c),
      "there", 
      Lead__r.Salutation_Name__c
    ), 
    IF(ISBLANK(Opportunity__r.Primary_Member__r.Salutation_Name__c), 
      "there",
      Opportunity__r.Primary_Member__r.Salutation_Name__c
    ) 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour With First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_With__c</fullName>
        <formula>IF( NOT(ISBLANK(Tour_Participant__c)),
  Tour_Participant__r.Salutation_Name__c,
  IF( NOT(ISBLANK(Lead__c)), 
    Lead__r.Salutation_Name__c, 
    Opportunity__r.Primary_Member__r.Salutation_Name__c  
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour With</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toured_By1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toured By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tour_Outcome</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tours_Booked_Today__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tours Booked Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tours_Visited__c</fullName>
        <formula>IF(Primary_Member__r.Total_Completed_Tours__c == 0 , '★ First Time Visit', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tours Visited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Two_Week_email_reminder_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send_Two_Week_email_reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Tour_ID__c</fullName>
        <description>This field captures the information on the Tour, like who is the primary contact, tour date, and time. Also, this is used to identify that no duplicate tours are created for the same contact, building on same data and time.</description>
        <inlineHelpText>To avoid duplicate tour bookings, we capture this.</inlineHelpText>
        <label>Unique Tour ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>